--- a/server/pb_hooks/pages/dashboard.ejs
+++ b/server/pb_hooks/pages/dashboard.ejs
@@ -7,6 +7,8 @@
     <% if (request.auth.verified()) { %>
       <p>✓ Verified account</p>
     <% } %>
+
+    <menu-form></menu-form>
   
   <% } else { %>
     <p>Please <a href="/login">log in</a>.</p>
