--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -1,4 +1,4 @@
-<div class="hero bg-base-200 flex-1">
+<div class="hero flex-1">
     <div class="hero-content text-center">
       <div class="max-w-md">
         <h1 class="text-5xl font-bold">Hello there</h1>
