--- a/server/pb_hooks/pages/+layout.ejs
+++ b/server/pb_hooks/pages/+layout.ejs
@@ -49,10 +49,10 @@
           <a class="btn btn-primary btn-lg rounded-box text-4xl pt-1 font-heading" href="/login">Donate</a>
         </div>
     </header>
-    <main class="flex flex-col flex-1 rounded-box border-y py-4 w-90/100 max-w-360">
+    <main class="flex flex-col flex-1 rounded-box border-y py-8 px-8 w-90/100 max-w-360">
     <%- slot %>
     </main>
-    <footer class="footer sm:footer-horizontal items-center p-4 w-980/100 max-w-340 -translate-y-12">
+    <footer class="footer sm:footer-horizontal items-center p-4 w-980/100 max-w-340 -translate-y-12 -mb-6">
         <aside class="grid-flow-col items-center bg-base-100 px-4">
           <a href="/">
             <img src="<%= asset('assets/images/horizontallogo.png') %>" alt="<%= $app.settings().meta.appName %> Logo" class="w-60">
