--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -1,12 +1,13 @@
+<h1 class="text-6xl text-center mt-12">Open 7 Days a week - 7:00AM to 4:30PM</h1>
+<div class="divider"></div>
 <div class="hero flex-1">
-    <div class="hero-content text-center">
-      <div class="max-w-md">
-        <h1 class="text-5xl font-bold">Hello there</h1>
-        <p class="py-6">
-          Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-          quasi. In deleniti eaque aut repudiandae et a id nisi.
-        </p>
-        <button class="btn btn-primary">Get Started</button>
-      </div>
+  <div class="hero-content flex">
+    <img src="<%= asset('assets/images/illustration.jpg') %>" alt="<%= $app.settings().meta.appName %> Logo" class="w-3/5">
+    <div class="w-2/5 flex flex-col items-center">
+      <h1 class="text-4xl">May Day Cafe Coop</h1>
     </div>
   </div>
+</div>
+<div class="divider mt-12">
+  <div class="text-5xl font-heading">Menu & Specials</div>
+</div>
