--- a/server/pb_hooks/pages/+layout.ejs
+++ b/server/pb_hooks/pages/+layout.ejs
@@ -10,83 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body class="flex flex-col items-center min-h-screen">
-    <header class="navbar bg-base-100 lg:w-80/100 lg:max-w-340 w-90/100 max-w-360 items-end">
-        <div class="navbar-start">
-          <div class="dropdown">
-            <div tabindex="0" role="button" class="lg:hidden">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
-            </div>
-            <ul
-              tabindex="0"
-              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-              <li><a>Item 1</a></li>
-              <li><a>Item 3</a></li>
-            </ul>
-          </div>
-          <ul class="menu menu-horizontal hidden lg:flex flex-1 justify-around px-1 text-4xl font-heading">
-            <li><a class="pt-4" href="/about">About</a></li>
-            <li><a class="pt-4" href="/contact">Contact</a></li>
-            <li><a class="pt-4" href="/events">Events</a></li>
-          </ul>
-        </div>
-        <div class="navbar-center flex">
-          <a href="/">
-            <img src="<%= asset('assets/images/circlelogo.svg') %>" alt="<%= $app.settings().meta.appName %> Logo" class="hidden lg:block h-40 px-3 -mb-8 bg-base-100 translate-y-2">
-            <img src="<%= asset('assets/images/smalllogo.svg') %>" alt="<%= $app.settings().meta.appName %> Logo" class="lg:hidden h-20 px-3 -mb-8 bg-base-100 translate-y-2">
-          </a>
-        </div>
-        <div class="navbar-end">
-          <ul class="menu menu-horizontal px-1 hidden lg:flex flex-1 justify-around text-4xl font-heading">
-            <li><a class="pt-4" href="/#menu">Menu & Specials</a></li>
-          </ul>
-          <a class="btn btn-primary btn-lg rounded-box text-4xl pt-1.5 font-heading hidden lg:block" href="/support">Support us!</a>
-          <a class="text-4xl pt-1 font-heading lg:hidden" href="/#">Menu</a>
-        </div>
-    </header>
+    <%- include('global-header.ejs') %>
     <main class="flex flex-col flex-1 rounded-box border-y py-8 px-8 w-90/100 max-w-360">
     <%- slot %>
     </main>
-    <footer class="footer sm:footer-horizontal items-center p-4 w-980/100 max-w-340 -translate-y-12 -mb-6">
-        <aside class="grid-flow-col items-center bg-base-100 px-4">
-          <a href="/">
-            <img src="<%= asset('assets/images/horizontallogo.png') %>" alt="<%= $app.settings().meta.appName %> Logo" class="w-60">
-          </a>        
-        </aside>
-        <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end bg-base-100 px-4">
-          <a>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              class="fill-current">
-              <path
-                d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path>
-            </svg>
-          </a>
-          <a>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              class="fill-current">
-              <path
-                d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path>
-            </svg>
-          </a>
-          <a>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              class="fill-current">
-              <path
-                d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path>
-            </svg>
-          </a>
-        </nav>
-      </footer>
+    <%- include('global-footer.ejs') %>
 </body>
 </html>
