remove events from the header and add the about and contact pages to the mobile menu

--- a/server/pb_hooks/pages/_private/global-header.ejs
+++ b/server/pb_hooks/pages/_private/global-header.ejs
@@ -7,14 +7,13 @@
         <ul
           tabindex="0"
           class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-          <li><a>Item 1</a></li>
-          <li><a>Item 3</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </div>
       <ul class="menu menu-horizontal hidden lg:flex flex-1 justify-around px-1 text-4xl font-heading">
         <li><a class="pt-4" href="/about">About</a></li>
         <li><a class="pt-4" href="/contact">Contact</a></li>
-        <li><a class="pt-4" href="/events">Events</a></li>
       </ul>
     </div>
     <div class="navbar-center flex">
@@ -28,6 +27,6 @@
         <li><a class="pt-4" href="/#menu">Menu & Specials</a></li>
       </ul>
       <a class="btn btn-primary btn-lg rounded-box text-4xl pt-1.5 font-heading hidden lg:block" href="/support">Support us!</a>
-      <a class="text-4xl pt-1 font-heading lg:hidden" href="/#">Menu</a>
+      <a class="text-4xl pt-1 font-heading lg:hidden" href="/#menu">Menu</a>
     </div>
 </header>
