--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -5,3 +5,71 @@
 <div class="w-1/1">
   <%- include('specials.ejs') %>
 </div>
+<div class="grid grid-cols-1 md:grid-cols-2">
+  <div class="menu col-span-full pl-0">
+    <h2 class="text-6xl pl-0">Menu</h2>
+  </div>  
+  <div class="quiche row-span-2 pb-6">
+    <h3 class="text-2xl">Quiche: $7.50</h3>
+    <ul>
+      <li>
+        Broccoli Cheddar
+      </li>
+    </ul>
+  </div>
+  <div class="breakfast-sandwich pb-6">
+    <h3 class="text-2xl">Breakfast Sandwich: $9.25</h3>
+    <p>On sourdough bread</p>
+    <div class="grid grid-cols-1 md:grid-cols-3">
+      <p>Veggie Sausage Egg and Cheddar</p>
+      <p class="text-center">OR</p>
+      <p>Ham Egg and Swiss</p>
+    </div>
+  </div>
+  <div class="breakfast-burrito pb-6">
+    <h3 class="text-2xl">Breakfast Burrito: $7.75</h3>
+    <p>
+      Potato, scrambled eggs, veggies, monterey jack cheese
+      and sour cream served with ranchero sauce and corn
+      chips
+    </p>
+  </div>
+  <div class="turkey">
+    <h3 class="text-2xl">Turkey Provolone Sandwich: $9.25</h3>
+  </div>
+  <div class="black-bean-burrito">
+    <h3 class="text-2xl">Black Bean Burrito: $7.00</h3>
+    <p>
+      Seasoned black beans, jasmine rice and monterey jack
+      cheese <br/>
+      ❤️ Vegan option available ❤️ <br/>
+      Served with corn chips and salsa
+    </p>
+  </div>
+</div>
+<!--  
+
+  <div class="">
+    <h3>Other Drinks</h3>
+    <h4>Tea</h4>
+    <h5>Black</h5>
+    <ul>
+      <li>English Breakfast</li>
+      <li>Earl Grey</li>
+    </ul>
+    <h5>Green</h5>
+    <ul>
+      <li>Organic Green</li>
+      <li>Ginger Lemongrass</li>
+      <li>Jasmine</li>
+    </ul>
+    <h5>Herbal</h5>
+    <ul>
+      <li>Mint</li>
+      <li>Rooibos</li>
+      <li>Chamomile</li>
+      <li>Lemon Red</li>
+      <li>Red Berry Hibiscus</li>
+    </ul>
+  </div> -->
+</div>
