--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -7,7 +7,7 @@
 </div>
 
 <!-- Grid for Tables -->
-<div class="grid grid-cols-1 md:grid-cols-3">
+<div class="grid grid-cols-1 md:grid-cols-3 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 m-auto">
   <!-- Coffee -->
   <table class="text-left col-span-2 row-span-2 mb-6 mr-6">
     <!-- head -->
@@ -159,7 +159,7 @@
 </div>
 
 <!-- Menu Grid -->
-<div class="grid grid-cols-1 md:grid-cols-2">
+<div class="grid grid-cols-1 md:grid-cols-2 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 m-auto">
   <div class="menu col-span-full pl-0">
     <h2 class="text-6xl pl-0">Menu</h2>
   </div>  
@@ -176,7 +176,7 @@
     <p>On sourdough bread</p>
     <div class="grid grid-cols-1 md:grid-cols-3">
       <p>Veggie Sausage Egg and Cheddar</p>
-      <p class="text-center">OR</p>
+      <p class="md:text-center">OR</p>
       <p>Ham Egg and Swiss</p>
     </div>
   </div>
