re-pad the specials

--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -2,7 +2,7 @@
 <div class="divider my-12">
   <div class="font-heading text-4xl">Try our weekly specials!</div>
 </div>
-<div class="w-1/1">
+<div class="w-1/1 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 m-auto">
   <%- include('specials.ejs') %>
 </div>
 
