move commented code around

--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -156,7 +156,59 @@
         </tr>
       </tbody>
   </table>
+    <!-- Drip Brew -->
+    <table class="text-left col-span-2 md:col-span-1 mb-6">
+      <!-- head -->
+      <thead>
+        <tr>
+          <th><h3 class="text-3xl pl-0">Drip Brew</h3></th>
+        </tr>
+      </thead>
+        <tbody>
+          <tr>
+            <td>To Go</td>
+            <td>3.00</td>
+            <td>3.50</td>
+            <td>4.25</td>
+          </tr>
+          <tr>
+            <td>8oz mug</td>
+            <td></td>
+            <td>2.30</td>
+          </tr>
+          <tr>
+            <td>Unlimited</td>
+            <td></td>
+            <td>3.00</td>
+          </tr>
+        </tbody>
+    </table>
 </div>
+<!--  
+
+  <div class="">
+    <h3>Other Drinks</h3>
+    <h4>Tea</h4>
+    <h5>Black</h5>
+    <ul>
+      <li>English Breakfast</li>
+      <li>Earl Grey</li>
+    </ul>
+    <h5>Green</h5>
+    <ul>
+      <li>Organic Green</li>
+      <li>Ginger Lemongrass</li>
+      <li>Jasmine</li>
+    </ul>
+    <h5>Herbal</h5>
+    <ul>
+      <li>Mint</li>
+      <li>Rooibos</li>
+      <li>Chamomile</li>
+      <li>Lemon Red</li>
+      <li>Red Berry Hibiscus</li>
+    </ul>
+  </div> -->
 
 <!-- Menu Grid -->
 <div class="grid grid-cols-1 md:grid-cols-2 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 m-auto">
@@ -201,29 +253,4 @@
     </p>
   </div>
 </div>
-<!--  
-
-  <div class="">
-    <h3>Other Drinks</h3>
-    <h4>Tea</h4>
-    <h5>Black</h5>
-    <ul>
-      <li>English Breakfast</li>
-      <li>Earl Grey</li>
-    </ul>
-    <h5>Green</h5>
-    <ul>
-      <li>Organic Green</li>
-      <li>Ginger Lemongrass</li>
-      <li>Jasmine</li>
-    </ul>
-    <h5>Herbal</h5>
-    <ul>
-      <li>Mint</li>
-      <li>Rooibos</li>
-      <li>Chamomile</li>
-      <li>Lemon Red</li>
-      <li>Red Berry Hibiscus</li>
-    </ul>
-  </div> -->
 </div>
