get rid of the overflow-x scroll on mobile by removing a css class on the footer and right size and align so other mobile elements

--- a/server/pb_hooks/pages/_private/global-footer.ejs
+++ b/server/pb_hooks/pages/_private/global-footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer sm:footer-horizontal items-center p-4 w-980/100 max-w-340 -translate-y-12 -mb-6">
+<footer class="footer sm:footer-horizontal items-center p-4 max-w-340 -translate-y-12 -mb-6">
     <aside class="grid-flow-col items-center bg-base-100 px-4">
       <a href="/">
         <img src="<%= asset(  'assets/images/horizontallogo.png') %>" alt="<%= $app.settings().meta.appName %> Logo" class="w-60">
