--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -1,13 +1,13 @@
-<h1 class="text-6xl text-center mt-10">Open 7 Days a week - 7:00AM to 4:30PM</h1>
-<div class="divider my-12">
-  <div class="font-heading text-4xl">Try our weekly specials!</div>
+<h1 class="text-3xl md:text-6xl text-center mt-10">Open 7 Days a week - 7:00AM to 4:30PM</h1>
+<div class="md:divider my-12">
+  <div class="text-2xl font-heading md:text-4xl">Try our weekly specials!</div>
 </div>
-<div class="w-1/1 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 m-auto">
+<div class="w-1/1 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 md:m-auto">
   <%- include('specials.ejs') %>
 </div>
 
 <!-- Grid for Tables -->
-<div class="grid grid-cols-1 md:grid-cols-3 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 m-auto">
+<div class="grid grid-cols-1 md:grid-cols-3 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 md:m-auto">
   <!-- Coffee -->
   <table class="text-left col-span-2 row-span-2 mb-6 mr-6">
     <!-- head -->
@@ -211,7 +211,7 @@
   </div> -->
 
 <!-- Menu Grid -->
-<div class="grid grid-cols-1 md:grid-cols-2 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 m-auto">
+<div class="grid grid-cols-1 md:grid-cols-2 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 md:m-auto">
   <div class="menu col-span-full pl-0">
     <h2 class="text-6xl pl-0">Menu</h2>
   </div>  
